Added cloud login web view
This recognizes the specific domain "twain.hazybits.com" and extracts the auth and refresh tokens.